# reclog

./: .gitignore  AUTHORS.md  CHANGES.md  Cargo.toml  Justfile  LICENSE  MANUAL.rst  Makefile  README.md  build.rs  reclog.1
.github/workflows/: build.yaml  build.yml  release.yml
script/: check_release.sh  make_release.sh  update_docs.sh
src/: buffer.rs  error.rs  format.rs  main.rs  pty.rs  reader.rs  shim.rs  signal.rs  status.rs  term.rs  writer.rs
